# mimir-ai-act-mcp

./: .env.example  .gitignore  Dockerfile  Dockerfile.actor  LICENSE  README.md  actor_main.py  http_main.py  pyproject.toml  server.py
.actor/: INPUT_SCHEMA.json  actor.json  dataset_schema.json
deploy/: README.md  caddy-snippet.conf  mimir-ai-act-api.service
examples/: chatbot_disclaimer.txt  deepfake_marketing.txt  voice_agent_script.txt
knowledge/: ai_act_full.md  ai_act_relevant.md  system_prompt.md  violations_catalog.json
schemas/: compliance_report.json
tests/: golden_set.jsonl  test_audits.py  test_offline.py
www/: ai-act-checker.css  ai-act-checker.js  index.html
