[project]
name = "mimir-ai-act-mcp"
version = "0.1.0"
description = "MCP server that audits AI deployments against EU AI Act Articles 5, 50, 53"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MIMIR", email = "info@mimir.lv" }]
keywords = ["mcp", "ai-act", "eu", "compliance", "audit", "anthropic", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
http = ["fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.urls]
Homepage = "https://mimir.lv"
Repository = "https://github.com/mimir-lv/mimir-ai-act-mcp"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "http_main"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "live: tests that hit the Anthropic API (slow, paid). Skipped unless RUN_AUDIT_EVAL=1.",
]
